# py_web

./: .gitignore  DESIGN_SYSTEM_REPORT.md  QUARANTINE_REPORT.md  README.md  UPDATE_SYSTEM_REPORT.md  design_demo.py  migration_report.json  pyproject.toml  run_app.py  test_health_system.py  test_integration.py  test_integration_safe.py  test_queue.py  test_scheduler.py  test_task_4_1.py  test_task_4_4.py
data/: 3xyaoi_com.json  queue_state.json  scheduler_state.json
data/health/: health_config.json  health_history.json  health_metrics.json
data/mapping/: 3xyaoi_com.json  apecomics_net.json  argoscomic_com.json  arthurscan_xyz.json  astratoons.json  bato_to.json  empreguetes_xyz.json  fbsquadx_com.json  fenixproject_site.json  fenixscan_xyz.json  galinhasamurai_com.json  imperiodabritannia_com.json  loverstoon_com.json  mangayabu.json  nexusscan_site.json  plumacomics_cloud.json  remangas_net.json  rfdragonscan_com.json  sussytoons_wtf.json  tatakaescan_com.json  tiraninha_baby.json  yomu_com_br.json  yugenmangasbr_yocat_xyz.json
data/quarantine/: stats.json
downloads/config/: pyteste_config.db
scripts/: build.py  migrate_mapping.py  start.py  test_health_checker.py
src/: __init__.py  mediocre_auto_uploader.py
test_data/: scheduler_queue.json  scheduler_state.json
test_data_queue/: queue_history.json  queue_metrics.json  queue_state.json
tests/: test_config_manager.py  test_discord_notifier.py  test_fixed_config.py  test_mapping_manager.py  test_migration.py  test_pyteste_core.py  test_unified_logger.py
web_app/: app.py  discord_routes.py
(+95 files in other folders)
