[project]
name = "pyteste"
version = "0.1.0"
description = ""
authors = [{ name = "lyem", email = "rfael403@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "undetected-chromedriver>=3.5.5,<4",
    "nodriver>=0.29rc2,<0.30",
    "pillow>=10.3.0,<11",
    "fake-useragent>=1.5.1,<2",
    "beautifulsoup4>=4.12.3,<5",
    "pyqt6>=6.7.0,<7",
    "platformdirs>=4.2.2,<5",
    "tldextract>=5.1.2,<6",
    "clipman>=3.2.3,<4",
    "pillow-avif-plugin>=1.4.3,<2",
    "dulwich>=0.22.1,<0.23",
    "cloudscraper>=1.2.71,<2",
    "opencv-python-headless>=4.10.0.84,<5",
    "cryptography>=43.0.3,<44",
    "cairosvg>=2.7.1,<3",
    "selenium>=4.35.0,<5",
    "webdriver-manager>=4.0.2,<5",
    "selenium-stealth>=1.0.6,<2",
    "drissionpage>=4.1.1.2,<5",
]

[project.scripts]
clean = "scripts.remove_cache:remove_cache_folders"
start = "scripts.start:run"
build = "scripts.build:install"
new = "scripts.template:generate"

[dependency-groups]
dev = [
    "pytest>=8.2.1,<9",
    "pyinstaller>=6.7.0,<7",
    "jinja2>=3.1.4,<4",
    "jurigged>=0.6.0,<0.7",
]

[tool.hatch.build.targets.sdist]
include = ["scripts/*"]

[tool.hatch.build.targets.wheel]
include = ["scripts/*"]
